# ludumdare-form-gpt

./: README.md  code.code-workspace
api/: Makefile  pyproject.toml
api/app/: main.py
web/: package-lock.json  package.json
web/src/: App.tsx
